Fixing data issue on safari

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -198,6 +198,13 @@ nav li.active a {
   line-height: 1.4;
 }
 
+.cv-content {
+  a[href^="x-apple-data-detectors"] {
+    color: inherit !important;
+    text-decoration: inherit !important;
+  }
+}
+
 .cv-content ul {
   font-size: 14px;
   list-style: circle;
